Updated Wang algorithm and added output files

--- a/Wangalgorithm_experiments.ipynb
+++ b/Wangalgorithm_experiments.ipynb
@@ -2,13 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5ab390bd",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Implementation of algorithm in \"Haemers' conjecture: algorithmic perspective\"\n",
@@ -34,28 +30,23 @@
     "    return matrix(ZZ, n, n, W_cols).transpose()\n",
     "\n",
     "\n",
-    "\n",
     "def adjust_almost_controllable(W, n, rk):\n",
-    "    \"\"\"\n",
-    "    Adjust the last column of W if almost controllable (rank = n-1).\n",
-    "    Returns adjusted W.\n",
-    "    \"\"\"\n",
     "    if rk != n - 1:\n",
     "        return W\n",
-    "    W_new = matrix(ZZ, W)  # Create a new matrix copy\n",
-    "    last_col = []\n",
-    "    sub_cols = range(n-1)\n",
-    "    denom = 2 ** (n // 2 - 1)\n",
-    "    if denom == 0:  # Avoid division by zero\n",
-    "        denom = 1\n",
+    "    W_new = matrix(ZZ, W)  # Copy\n",
+    "    B = W_new[:, :n-1]  # n x (n-1)\n",
+    "    # Compute left kernel over QQ\n",
+    "    B_qq = B.change_ring(QQ)\n",
+    "    kernel_basis = B_qq.kernel().basis()\n",
+    "    v_rat = kernel_basis[0]  # 1D kernel\n",
+    "    # Scale by a consistent factor\n",
     "    for t in range(n):\n",
-    "        sub_rows = [i for i in range(n) if i != t]\n",
-    "        sub_M = W_new[sub_rows, sub_cols]\n",
-    "        det_sub = sub_M.det()\n",
-    "        sign = (-1) ** ((n + t) % 2)\n",
-    "        last_col.append(sign * det_sub / denom)\n",
-    "\n",
-    "    W_new.set_column(n-1, last_col)\n",
+    "        if v_rat[t] != 0:\n",
+    "            lastentry = B[[i for i in range(n) if i != t], :].det()\n",
+    "            factor = lastentry / v_rat[t] / 2 ** (n // 2 - 1)\n",
+    "            v_rat *= factor\n",
+    "            break \n",
+    "    W_new.set_column(n-1, v_rat)\n",
     "    return W_new\n",
     "\n",
     "\n",
@@ -67,14 +58,14 @@
     "    if d == 0:\n",
     "        return []  # Handle gcd=0 case: no common primes\n",
     "\n",
-    "    timeout_seconds = 300\n",
+    "    timeout_seconds = 600\n",
     "    try:\n",
-    "        alarm(timeout_seconds)          # start the timer\n",
+    "        alarm(timeout_seconds)          \n",
     "        f_d = d.factor()            # try to factor\n",
-    "        alarm(0)                        # cancel the alarm if it succeeded\n",
+    "        alarm(0)                        \n",
     "        return [p for p, exp in f_d if p > 2 and (Delta % (p ** 2) == 0)]\n",
-    "    except AlarmInterrupt:              # this is raised when time is up\n",
-    "        alarm(0)                        # cancel the alarm (important!)\n",
+    "    except AlarmInterrupt:              \n",
+    "        alarm(0)                        \n",
     "        print(f\"Factoring took more than {timeout_seconds} seconds → skipped\")\n",
     "        return None                 \n",
     "    except Exception as e:\n",
@@ -171,21 +162,21 @@
     "    \"\"\"\n",
     "    UB = 65536\n",
     "    MAX_NOS = 10**6\n",
-    "    timeout_seconds = 300\n",
+    "    timeout_seconds = 600\n",
     "    R_m = IntegerModRing(m)\n",
     "\n",
     "    divisors = W_p.elementary_divisors()\n",
     "   \n",
     "    reduced_Wp = W_p.change_ring(R_m)\n",
-    "    W_p = matrix(ZZ, reduced_Wp)  # Create a new matrix copy\n",
+    "    W_p = matrix(ZZ, reduced_Wp)  # Create a new matrix copy with reduced entries\n",
     "    try:\n",
-    "        alarm(timeout_seconds)                    # start the timer\n",
+    "        alarm(timeout_seconds)                    \n",
     "        S, U, V = W_p.transpose().smith_form()       \n",
-    "        alarm(0)                        # cancel the alarm if it succeeded\n",
-    "    except AlarmInterrupt:              # this is raised when time is up\n",
+    "        alarm(0)                        \n",
+    "    except AlarmInterrupt:             =\n",
     "        alarm(0)   \n",
     "        gc.collect()                     \n",
-    "        print(f\"Smith normal form took more than 300 seconds → skipped\")\n",
+    "        print(f\"Smith normal form took more than 600 seconds → skipped\")\n",
     "        return [] \n",
     "    except Exception as e:\n",
     "        alarm(0)\n",
@@ -214,6 +205,7 @@
     "    diag_mat = diagonal_matrix(ZZ, [m // T[i] for i in range(lenT)])\n",
     "    V_right = V[:, -lenT:]\n",
     "   \n",
+    "    # List all solutions pv\n",
     "    for v_tup in product(*[range(t) for t in T]):\n",
     "        v = vector(ZZ, v_tup)\n",
     "        pv_zz = V_right * diag_mat * v\n",
@@ -236,7 +228,7 @@
     "            S = W_p.elementary_divisors()\n",
     "        except MemoryError:\n",
     "            print(f\"Warning: MemoryError computing elementary divisors for p={p}, skipping.\")\n",
-    "            return None, None, None # Return what we have so far\n",
+    "            return None, None, None # Return None to indicate failure\n",
     "        dn = S[n-1]\n",
     "\n",
     "        gc.collect()  # Force garbage collection after elementary_divisors\n",
@@ -248,6 +240,9 @@
     "        L *= m\n",
     "        mList.append(m)\n",
     "        pVex = solve_congruences(W_p, p, m, n, A)\n",
+    "        if len(pVex) == 0:\n",
+    "            print(f\"Warning: No solutions found for p={p}, skipping.\")\n",
+    "            return None, None, None # Return None to indicate failure\n",
     "        Pii.append(pVex)\n",
     "    return L, mList, Pii\n",
     "\n",
@@ -277,6 +272,7 @@
     "    indpos = [i for i in range(n) if Pv[i] > 0]\n",
     "    indnz = indneg + indpos\n",
     "    if len(indnz) == 0:\n",
+    "        #We have Pv = 0, which is already accounted for\n",
     "        return []\n",
     "    A1 = A.matrix_from_rows_and_columns(indnz, indnz)\n",
     "    result = []\n",
@@ -285,7 +281,7 @@
     "            for comb_dec in combinations(range(len(indpos)), dec):\n",
     "                sum_a = sum(-Pv[indneg[k]] for k in comb_inc)\n",
     "                sum_b = sum(Pv[indpos[k]] for k in comb_dec)\n",
-    "                right_side = s // (2 * L) + L * (inc + dec - 1) // 2\n",
+    "                right_side = (s // L + inc + dec - 1)// 2\n",
     "                if sum_a + sum_b == right_side:\n",
     "                    Pv1 = vector(ZZ, [Pv[i] for i in indnz])\n",
     "                    for k in comb_inc:\n",
@@ -325,7 +321,7 @@
     "    TT = [len(pii) for pii in Pii]\n",
     "    Nos = prod(TT)\n",
     "    if Nos > UB:\n",
-    "        print(f\"Note: CRT enumeration size {Nos} > {UB}, computationally expensive but proceeding.\")\n",
+    "        print(f\"Note: CRT enumeration size {Nos} > {UB}, computationally expensive not proceeding.\")\n",
     "        return []\n",
     "    if Nos == 0:\n",
     "        return []\n",
@@ -391,13 +387,13 @@
     "    # Compute L, Pii, and PVex\n",
     "    L, mList, Pii = compute_L_Pii(A, pLimproved, Wall, n)\n",
     "    if L is None:\n",
-    "        return -4 #something went wrong in computing L and Pii\n",
+    "        return -4 #Either memory issues in elementary_divisors or a prime factor was too big\n",
     "\n",
     "    PVex = compute_PVex(L, mList, Pii, n, A, e)\n",
     "    \n",
     "    if len(PVex) == 0:\n",
-    "        return -2 #For some p could not solve the system of equations in solve_congruences due to large enumeration size\n",
-    "\n",
+    "        return -2 #Could not combine solutions due to large modulo.\n",
+    "        \n",
     "    # Check if Omega(G) has n vertices\n",
     "    if len(PVex) == n:\n",
     "        return 1\n",
@@ -422,11 +418,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5351ae33",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -456,7 +448,6 @@
    "source": [
     "# Run the algorithm on the 2-core of the giant component of sparse graphs\n",
     "\n",
-    "import random\n",
     "from collections import Counter\n",
     "\n",
     "def giant_component(G):\n",
@@ -482,20 +473,20 @@
     "\n",
     "#Choose the order of the graph and the average degree\n",
     "n = 50\n",
-    "checked_graphs = []\n",
-    "deglist = [1.2, 1.5, 2.5, 5]\n",
+    "deglist = [1.2, 1.5, 2, 2.5, 5]\n",
+    "\n",
+    "generated_graphs = []\n",
     "\n",
     "for edges in deglist:\n",
     "    temp = []\n",
     "    for _ in range(100):\n",
     "        temp.append(two_core(giant_component(graphs.RandomGNP(n, edges/(n-1)))))\n",
-    "    checked_graphs.append(temp)\n",
+    "    generated_graphs.append(temp)\n",
     "\n",
     "ds = []\n",
     "order = []\n",
     "gstrings = []\n",
     "countedDS = []\n",
-    "ndsgraphs = []\n",
     "for edges in range(len(deglist)):   \n",
     "    deg = deglist[edges]\n",
     "    print('average degree:', deg)\n",
@@ -505,11 +496,9 @@
     "    temp = []\n",
     "\n",
     "    with open(f'Wangalg_results_degree_{deg}_{n}.txt', 'w') as f:\n",
-    "        for G in checked_graphs[edges]:\n",
+    "        for G in generated_graphs[edges]:\n",
     "            wangalg_output = is_DS(G)\n",
-    "            f.write(f'{wangalg_output} :{G.sparse6_string()} \\n')\n",
-    "            if wangalg_output == 0:\n",
-    "                ndsgraphs.append(G)\n",
+    "            f.write(f'{wangalg_output} ! {G.sparse6_string()} \\n')\n",
     "            temp.append(wangalg_output)\n",
     "    \n",
     "    ds.append(temp)\n",
@@ -534,7 +523,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "sage",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.14"
