Increased the upper bound for CRT termination, improved the distinction between termination values, and corrected the output for 1.5 and 100.

--- a/Wangalgorithm_experiments.ipynb
+++ b/Wangalgorithm_experiments.ipynb
@@ -2,9 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5ab390bd",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
    "outputs": [],
    "source": [
     "#Implementation of algorithm in \"Haemers' conjecture: algorithmic perspective\"\n",
@@ -173,7 +177,7 @@
     "        alarm(timeout_seconds)                    \n",
     "        S, U, V = W_p.transpose().smith_form()       \n",
     "        alarm(0)                        \n",
-    "    except AlarmInterrupt:             =\n",
+    "    except AlarmInterrupt:\n",
     "        alarm(0)   \n",
     "        gc.collect()                     \n",
     "        print(f\"Smith normal form took more than 600 seconds → skipped\")\n",
@@ -300,7 +304,7 @@
     "    Compute PVex using CRT and adjustments.\n",
     "    Returns PVex.\n",
     "    \"\"\"\n",
-    "    UB = 65536\n",
+    "    UB = 6553600\n",
     "    PVex = []\n",
     "    for j in range(n):\n",
     "        vec = vector(ZZ, [0]*n)\n",
@@ -387,12 +391,12 @@
     "    # Compute L, Pii, and PVex\n",
     "    L, mList, Pii = compute_L_Pii(A, pLimproved, Wall, n)\n",
     "    if L is None:\n",
-    "        return -4 #Either memory issues in elementary_divisors or a prime factor was too big\n",
+    "        return -2 #Either memory issues in elementary_divisors or a prime factor was too big in solve_congruences\n",
     "\n",
     "    PVex = compute_PVex(L, mList, Pii, n, A, e)\n",
     "    \n",
     "    if len(PVex) == 0:\n",
-    "        return -2 #Could not combine solutions due to large modulo.\n",
+    "        return -4 #Could not combine solutions  in CRT.\n",
     "        \n",
     "    # Check if Omega(G) has n vertices\n",
     "    if len(PVex) == n:\n",
@@ -416,9 +420,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5351ae33",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -427,21 +435,51 @@
       "PARI stack size set to 8589934592 bytes, maximum size set to 8589934592\n",
       "average degree: 1.20000000000000\n",
       "average degree: 1.50000000000000\n",
-      "Warning: Skipping p=3 due to large enumeration size 1162261467 > 1000000\n",
-      "Note: Enumeration for p=2 has size 524288 > 65536, proceeding.\n",
+      "Note: Enumeration for p=383 has size 146689 > 65536, proceeding.\n",
+      "Warning: Skipping p=1327217 due to large enumeration size 1761504965089 > 1000000\n",
+      "Warning: No solutions found for p=1327217, skipping.\n",
+      "Note: Enumeration for p=257 has size 66049 > 65536, proceeding.\n",
+      "Warning: Skipping p=2713 due to large enumeration size 7360369 > 1000000\n",
+      "Warning: No solutions found for p=2713, skipping.\n",
+      "average degree: 2\n",
+      "Warning: Skipping p=11117 due to large enumeration size 123587689 > 1000000\n",
+      "Warning: No solutions found for p=11117, skipping.\n",
+      "Warning: Skipping p=1811 due to large enumeration size 3279721 > 1000000\n",
+      "Warning: No solutions found for p=1811, skipping.\n",
+      "Note: Enumeration for p=2 has size 131072 > 65536, proceeding.\n",
+      "Warning: Skipping p=126238770683 due to large enumeration size 15936227223555060286489 > 1000000\n",
+      "Warning: No solutions found for p=126238770683, skipping.\n",
+      "Note: Enumeration for p=383 has size 146689 > 65536, proceeding.\n",
+      "Warning: Skipping p=84794219 due to large enumeration size 7190059575819961 > 1000000\n",
+      "Warning: No solutions found for p=84794219, skipping.\n",
+      "Warning: Skipping p=2801 due to large enumeration size 7845601 > 1000000\n",
+      "Warning: No solutions found for p=2801, skipping.\n",
       "average degree: 2.50000000000000\n",
       "Note: Enumeration for p=2 has size 524288 > 65536, proceeding.\n",
-      "Warning: Skipping p=2 due to large enumeration size 4194304 > 1000000\n",
-      "Warning: Skipping p=2 due to large enumeration size 8589934592 > 1000000\n",
-      "Warning: Skipping p=2 due to large enumeration size 536870912 > 1000000\n",
-      "Warning: Skipping p=2 due to large enumeration size 16777216 > 1000000\n",
+      "Warning: Skipping p=2 due to large enumeration size 33554432 > 1000000\n",
+      "Warning: No solutions found for p=2, skipping.\n",
+      "Warning: Skipping p=2 due to large enumeration size 67108864 > 1000000\n",
+      "Warning: No solutions found for p=2, skipping.\n",
+      "Warning: Skipping p=2 due to large enumeration size 2097152 > 1000000\n",
+      "Warning: No solutions found for p=2, skipping.\n",
+      "Note: Enumeration for p=2 has size 524288 > 65536, proceeding.\n",
       "Note: Enumeration for p=2 has size 131072 > 65536, proceeding.\n",
-      "Warning: Skipping p=71663 due to large enumeration size 5135585569 > 1000000\n",
-      "Warning: Skipping p=223149931307608914113 due to large enumeration size 49795891842590577013224996447779010576769 > 1000000\n",
-      "Warning: Skipping p=29784038494663216605025207802416836187199189146523903 due to large enumeration size 887088949051580325824301422320245552957743124386443334107585481594109634527879704377848642898588150353409 > 1000000\n",
+      "Warning: Skipping p=119185777 due to large enumeration size 14205249439093729 > 1000000\n",
+      "Warning: No solutions found for p=119185777, skipping.\n",
+      "Warning: Skipping p=2 due to large enumeration size 2147483648 > 1000000\n",
+      "Warning: No solutions found for p=2, skipping.\n",
+      "Warning: Skipping p=18843869380539499997 due to large enumeration size 355091413230834119348247843966763000009 > 1000000\n",
+      "Warning: No solutions found for p=18843869380539499997, skipping.\n",
+      "Warning: Skipping p=702337 due to large enumeration size 493277261569 > 1000000\n",
+      "Warning: No solutions found for p=702337, skipping.\n",
+      "Warning: Skipping p=1916537591557 due to large enumeration size 3673116339851106157684249 > 1000000\n",
+      "Warning: No solutions found for p=1916537591557, skipping.\n",
+      "Note: Enumeration for p=2 has size 131072 > 65536, proceeding.\n",
       "average degree: 5\n",
-      "[369, 977, 3215, 4826]\n",
-      "[Counter({4: 55, -1: 39, 1: 6}), Counter({-1: 48, 4: 28, 1: 18, 2: 3, 3: 2, -2: 1}), Counter({1: 75, 3: 9, -1: 7, -2: 5, 0: 3, 2: 1}), Counter({1: 100})]\n"
+      "Note: CRT enumeration size 7030400 > 6553600, computationally expensive not proceeding.\n",
+      "Note: Enumeration for p=2 has size 131072 > 65536, proceeding.\n",
+      "[441, 959, 2386, 3271, 4834]\n",
+      "[Counter({4: 49, -1: 48, 1: 3}), Counter({-1: 47, 4: 25, 1: 24, -2: 2, 2: 1, 3: 1}), Counter({1: 65, -1: 26, -2: 5, 3: 2, 4: 1, 2: 1}), Counter({1: 80, -1: 10, -2: 8, 3: 2}), Counter({1: 99, -4: 1})]\n"
      ]
     }
    ],
@@ -492,7 +530,7 @@
     "    print('average degree:', deg)\n",
     "    gc.collect()\n",
     "\n",
-    "    order.append(sum(G.order() for G in checked_graphs[edges]))\n",
+    "    order.append(sum(G.order() for G in generated_graphs[edges]))\n",
     "    temp = []\n",
     "\n",
     "    with open(f'Wangalg_results_degree_{deg}_{n}.txt', 'w') as f:\n",
@@ -523,7 +561,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "sage",
+   "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.14"
